--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "default-app",
+  "name": "service",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,12 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "debug": "^3.1.0",
-    "express": "^4.16.1",
+    "express": "^4.16.3",
     "include-all": "^4.0.3",
-    "mongoose": "^4.12.1",
-    "morgan": "^1.9.0",
-    "rotating-file-stream": "^1.3.2"
+    "mongoose": "^5.0.11",
+    "morgan": "^1.9.0"
   }
 }
