--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "include-all": "^4.0.3",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.11",
     "morgan": "^1.9.0"
   }
